src/styles/components/_dialog.scss
.octo-dialog {
  text-align: center;

  &.is-serious {
    text-align: left;
  }
  
  .octo-dialog__message {
    margin-top: 1.25rem;
  }

  .octo-dialog__serious-danger {
    margin-top: 2.5rem;
  }

  .octo-dialog__buttons {
    margin-top: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;

    * + * {
      margin-left: 1rem;
    }
  }
}

